<?xml version= "1.0" encoding = "utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="fill_parent"
android:layout_width="fill_parent"
android:padding="30dip"
android:orientation="horizontal">
	<LinearLayout
			android:orientation="vertical"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_gravity="center">
		<ImageView 
			android:id="@+id/image_view"
			android:src="@drawable/title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
		</ImageView>
		<Button
			android:id="@+id/new_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/new_game_label" />
		<Button
			android:id="@+id/hiscore_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/hiscore_label" />
		<Button
			android:id="@+id/settings_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings_label" />
		<Button
			android:id="@+id/help_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/help_label" />
		<Button
			android:id="@+id/exit_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/exit_label" />
	</LinearLayout>
</LinearLayout>
